# project_aeiou

./: .gitignore  Dockerfile  LICENSE  docker-compose.yaml
AEIOU/: app.py  pyproject.toml
AEIOU/agents/: llm.py  utils.py  workflow.py
AEIOU/agents/advisor/: node.py  state.py  utils.py  workflow.py
AEIOU/agents/executer/: node.py  state.py  tool.py  utils.py  workflow.py
AEIOU/agents/interpretor/: node.py  state.py  workflow.py
AEIOU/agents/organizer/: node.py  state.py  utils.py  workflow.py
AEIOU/agents/unified_manager/: node.py
AEIOU/data/user/: plans.json  preferences.json  tasks.json
AEIOU/tests/: display_test.py
AEIOU/utils/: chat_logs.py  input_box.py  setting.py
